# iggavestment

./: .gitignore  CHANGELOG.md  README.md  REVIEW.md  index.html  netlify.toml  pyproject.toml
.github/workflows/: refresh.yml
data/: audit.jsonl
data/history/: 2026-05-20-22.json  2026-05-21-07.json  2026-05-21-09.json  2026-05-21-19.json  2026-05-21-21.json  2026-05-22-07.json  2026-05-22-08.json  2026-05-22-19.json  2026-05-22-21.json  2026-05-23-05.json  2026-05-23-07.json  2026-05-23-19.json  2026-05-23-22.json  2026-05-24-05.json  2026-05-24-07.json  2026-05-24-19.json  2026-05-24-22.json  2026-05-25-07.json  2026-05-25-08.json  2026-05-25-19.json  2026-05-25-22.json  2026-05-26-07.json  2026-05-26-09.json  2026-05-26-19.json  2026-05-26-22.json  2026-05-27-07.json  2026-05-27-09.json  2026-05-27-19.json  2026-05-27-22.json  2026-05-28-07.json  2026-05-28-09.json  2026-05-28-19.json  2026-05-28-22.json  2026-05-29-07.json  2026-05-29-09.json  2026-05-29-19.json  2026-05-29-21.json  2026-05-30-05.json  2026-05-30-07.json  2026-05-30-19.json  (+219 more)
iggavestment/: __init__.py  claude_cli.py  cli.py  config.py  db.py  fetch.py  history.py  llm.py  normalize.py  render.py  schema.py  score.py  synthesize.py
iggavestment/prompts/: score_event.txt  synthesize_state.txt
tests/: test_arithmetic.py  test_cold_start.py  test_history.py  test_new_fixes.py  test_normalize.py  test_render.py  test_schema.py  test_signal_quality.py  test_synthesize.py
