[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iggavestment"
version = "1.0.0"
description = "Twice-daily thematic conviction dashboard for the 7-theme DCA portfolio"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "pydantic>=2.7.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
]

[project.scripts]
iggavestment = "iggavestment.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["iggavestment"]

[project.optional-dependencies]
ci = [
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "responses>=0.25.3",
]
